deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
  labels:
    app: nodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp 
    spec:
      volumes:
      - name: logs-storage
        persistentVolumeClaim:
          claimName: claim
      containers:
      - name: nodeserver
        image: ujinslav/nodeapp
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/app/data"
          name: logs-storage
