service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  type: ClusterIP
  selector:
    app: nodeapp 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
